--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ flask-sqlalchemy = "*"
 marshmallow-sqlalchemy = "*"
 flask-marshmallow = "*"
 python-dotenv = "*"
+flask-cors = "*"
 
 [dev-packages]
 python-dotenv = "*"
