--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask-marshmallow = "*"
 python-dotenv = "*"
 flask-cors = "*"
 flask-migrate = "*"
+requests = "*"
 
 [dev-packages]
 python-dotenv = "*"
