:heavy_plus_sign: Instalação das extensões para autenticação JWT.

--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,13 @@ python-dotenv = "*"
 flask-cors = "*"
 flask-migrate = "*"
 requests = "*"
+flask-script = "*"
+flask-jwt = "*"
+pyjwt = "*"
 
 [dev-packages]
 python-dotenv = "*"
 requests = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3"
